--- a/index.html
+++ b/index.html
@@ -286,6 +286,6 @@
 
     <!-- Particle.js CDN -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js?v=3"></script>
   </body>
 </html>
